# XChange-Rust

./: .gitignore  Cargo.toml  README.md
xchange-binance/: Cargo.toml
xchange-binance/src/: binance.rs  binance_authed.rs  binance_error_adapter.rs  binance_exchange.rs  binance_resilience.rs  binance_time_provider.rs  lib.rs
xchange-binance/src/client/: binance.rs  binance_authed.rs  binance_futures.rs  binance_spot.rs  mod.rs
xchange-binance/src/dto/: mod.rs
xchange-binance/src/dto/account/: binance_currency_info.rs  mod.rs
xchange-binance/src/dto/marketdata/: binance_kline.rs  mod.rs
xchange-binance/src/dto/meta/: binance_system.rs  exchange_info.rs  mod.rs
xchange-binance/src/service/: account_service.rs  binance_account_service_raw.rs  binance_base_service.rs  market_data_service.rs  market_data_service_inner.rs  mod.rs
xchange-binance/tests/: binance_client_tests.rs  binance_exchange_tests.rs  binance_service_tests.rs
xchange-core/: Cargo.toml
xchange-core/src/: exchange.rs  exchange_specification.rs  lib.rs
xchange-core/src/client/: client_config.rs  exchange_rest_proxy_builder.rs  mod.rs  resilience_registries.rs
xchange-core/src/currency/: currency.rs  currency_pair.rs  mod.rs
xchange-core/src/derivative/: futures_contract.rs  mod.rs  options_contract.rs
xchange-core/src/dto/: loan_order.rs  mod.rs  order.rs
xchange-core/src/dto/account/: account_info.rs  address_with_tag.rs  balance.rs  fee.rs  funding_record.rs  mod.rs  open_position.rs  open_positions.rs  wallet.rs
xchange-core/src/dto/marketdata/: candle_stick.rs  candle_stick_data.rs  funding_rate.rs  funding_rates.rs  loan_order_book.rs  mod.rs  order_book.rs  order_book_update.rs  ticker.rs  trade.rs  trades.rs
xchange-core/src/dto/meta/: currency_metadata.rs  exchange_metadata.rs  fee_tier.rs  instrument_metadata.rs  mod.rs  rate_limit.rs
xchange-core/src/dto/trade/: fixed_rate_loan_order.rs  floating_rate_loan_order.rs  limit_order.rs  market_order.rs  mod.rs  open_loan_orders.rs  open_orders.rs  stop_order.rs  user_trade.rs  user_trades.rs
xchange-core/src/error/: exchange_error.rs  exchange_security_exception.rs  macros.rs  mod.rs
xchange-core/src/instrument/: mod.rs
xchange-core/src/rescu/: mod.rs  params_digest.rs  resilient_http_client.rs  resilient_http_client_bake.rs
xchange-core/src/service/: mod.rs
xchange-core/src/service/account/: account_service.rs  mod.rs
xchange-core/src/service/account/params/: default_request_deposit_address_params.rs  mod.rs
xchange-core/src/service/marketdata/: market_data_service.rs  mod.rs
xchange-core/src/service/marketdata/params/: mod.rs
xchange-core/src/service/trade/: mod.rs  trade_service.rs
xchange-core/src/service/trade/params/: mod.rs
xchange-core/src/service/trade/params/orders/: default_query_order_param.rs  mod.rs
xchange-core/src/utils/: auth_utils.rs  mod.rs  time_nonce.rs
xchange-macros/: Cargo.toml
xchange-macros/src/: lib.rs  lib_bake.rs
