[workspace]
resolver = "2"

members = ["xchange-core"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["mountainsea-lab <w1999wtw3537@gmail.com>"]
repository = "https://github.com/mountainsea-lab/XChange-Rust.git"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
once_cell = "1.20.3"
iso_currency = "0.5.3"
regex = "1.12.2"
chrono = "0.4.42"
rust_decimal = "1.39.0"
