[workspace]
resolver = "2"

members = ["xchange-binance","xchange-core"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["mountainsea-lab <w1999wtw3537@gmail.com>"]
repository = "https://github.com/mountainsea-lab/XChange-Rust.git"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
once_cell = "1.20.3"
iso_currency = "0.5.3"
regex = "1.12.2"
chrono = "0.4.42"
rust_decimal = "1.39.0"
log = "0.4.28"
num-bigint = "0.4.6"
parking_lot = "0.12.5"
thiserror = "2.0.11"
async-trait = "0.1.89"
xchange-core =  { path = "xchange-core" }