[package]
name = "xchange-binance"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
xchange-core = {workspace = true }
thiserror = {workspace = true }
serde = { workspace = true, features = ["derive"] }
reqwest = "0.12.24"
serde_json = "1.0.145"
chrono = {workspace = true, features = ["serde"]  }