[package]
name = "xchange-binance"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
xchange-core = {workspace = true }

tokio = { workspace = true, features = ["full"] }
parking_lot = {workspace = true }
thiserror = {workspace = true }
serde = { workspace = true, features = ["derive"] }
reqwest = {workspace = true, features = ["rustls-tls"]  }
serde_json = {workspace = true }
chrono = {workspace = true, features = ["serde"]  }
async-trait = {workspace = true }
retrofit-rs = {workspace = true,features = ["async"] }
futures = {workspace = true }
tracing = {workspace = true }
