[package]
name = "xchange-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
phf = {workspace = true}
serde = { workspace = true, features = ["derive"] }
serde_json = {workspace = true }
once_cell = "1.20.3"