[package]
name = "xchange-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = {workspace = true }
once_cell = {workspace = true }
iso_currency = {workspace = true }
regex = {workspace = true }
chrono = {workspace = true, features = ["serde"]  }
rust_decimal = {workspace = true }
log = {workspace = true }