[package]
name = "xchange-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = {workspace = true }
once_cell = {workspace = true }
iso_currency = {workspace = true }
regex = {workspace = true }
chrono = {workspace = true, features = ["serde"]  }
rust_decimal = {workspace = true }
log = {workspace = true }
num-bigint = {workspace = true }
parking_lot = {workspace = true }
thiserror = {workspace = true }
async-trait = {workspace = true }
tokio = {workspace = true, features = ["time", "sync"] }
reqwest = {workspace = true, features = ["rustls-tls",'json']  }

hmac = {workspace = true }
sha2 = {workspace = true }
hex = {workspace = true }
base64 = {workspace = true }